--- a/src/main/resources/forcedChangePasswordPage.fxml
+++ b/src/main/resources/forcedChangePasswordPage.fxml
@@ -8,6 +8,12 @@
 
 <AnchorPane fx:id="anchorPane" prefHeight="450.0" prefWidth="800.0" style="-fx-background-color: #ceecec;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pagecontrollers.ForcedChangePasswordPageController">
     <children>
+        <ImageView fx:id="UIProfileImageView" fitHeight="50.0" fitWidth="50.0" layoutX="710.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true" />
+        <Text fx:id="UINameText" layoutX="719.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
+        <Text fx:id="UIEmailText" layoutX="721.0" layoutY="115.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email" />
+        <Button fx:id="logOutButton" layoutX="706.0" layoutY="133.0" mnemonicParsing="false" onMouseClicked="#logOutButtonClick" text="Log Out" />
+        <Text fx:id="currentTimeText" layoutX="14.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CurrentTime" wrappingWidth="78.13671875" />
+        <Text fx:id="lastTimeLoggedInText" layoutX="208.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Time Logged In : LastTimeLoggedIn" />
         <TextField fx:id="passwordTextField" layoutX="315.0" layoutY="95.0" maxWidth="170.0" minWidth="160.0" prefHeight="26.0" prefWidth="170.0" promptText="Current Password" />
         <TextField fx:id="newPasswordTextField" layoutX="315.0" layoutY="139.0" maxWidth="170.0" minWidth="160.0" prefHeight="26.0" prefWidth="170.0" promptText="New Password" />
         <TextField fx:id="repeatNewPasswordTextField" layoutX="314.0" layoutY="171.0" maxWidth="170.0" minWidth="160.0" prefHeight="26.0" prefWidth="170.0" promptText="Repeat New Password" />
